# asr-context-induced-leakage

./: .gitignore  README.md  paper_examples.txt  pyproject.toml  test_models.py  utils.py
configs/: qwen_omni_lora_acl6060_both.yaml  qwen_omni_lora_acl6060_both_fleurs_mixed.yaml  qwen_omni_lora_acl6060_context_word.yaml  qwen_omni_lora_acl6060_context_word_fleurs_mixed.yaml  qwen_omni_lora_acl6060_target_word.yaml  qwen_omni_lora_acl6060_target_word_fleurs_mixed.yaml  qwen_omni_lora_both.yaml  qwen_omni_lora_both_fleurs_mixed.yaml  qwen_omni_lora_context_word.yaml  qwen_omni_lora_context_word_fleurs_mixed.yaml  qwen_omni_lora_fleurs_context_1.yaml  qwen_omni_lora_fleurs_context_10.yaml  qwen_omni_lora_fleurs_context_5.yaml  qwen_omni_lora_fleurs_context_mixed.yaml  qwen_omni_lora_target_word.yaml  qwen_omni_lora_target_word_fleurs_mixed.yaml  qwen_omni_lora_voxpopuli_both.yaml  qwen_omni_lora_voxpopuli_both_fleurs_mixed.yaml  qwen_omni_lora_voxpopuli_context_word.yaml  qwen_omni_lora_voxpopuli_context_word_fleurs_mixed.yaml  qwen_omni_lora_voxpopuli_target_word.yaml  qwen_omni_lora_voxpopuli_target_word_fleurs_mixed.yaml  qwen_omni_merge_both.yaml  qwen_omni_merge_context_word.yaml  qwen_omni_merge_target_word.yaml
data/: acl6060.py  fleurs.py  utils.py  voxpopuli.py
data_preparation/: prepare.py  prepare_acl6060.py  prepare_fleurs_context_ft.py  prepare_llama_factory_context_data.py  prepare_llama_factory_data.py  prepare_voxpopuli.py  run_prepare.sh  tts_sentences.py  utils.py
evaluation/: evaluate.py  plot_results.py
models/: phi_multimodal.py  qwen_omni.py
(+86 files in other folders)
